[tool.poetry]
name = "lms-api"
version = "0.1.0"
description = ""
authors = ["Adegboyega Ademola <a.adegboyega11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.0"
fastapi = "^0.109.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
