[tool.poetry]
name = "lms-api"
version = "0.1.0"
description = ""
authors = ["Adegboyega Ademola <a.adegboyega11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.0"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
databases = "*"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
email-validator = "^2.1.0.post1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
